--- a/Manhour Planning Tool-3.html
+++ b/Manhour Planning Tool-3.html
@@ -40,11 +40,16 @@
             color: var(--color-text-primary);
             line-height: 1.6;
             padding: 20px;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
 
         .container {
             max-width: 1400px;
             margin: 0 auto;
+            width: 100%;
+            flex: 1;
         }
 
         header {
@@ -492,6 +497,36 @@
         .scroll-table {
             overflow-x: auto;
         }
+
+        .workflow-card {
+            display: flex;
+            justify-content: center;
+        }
+
+        .workflow-card .mermaid {
+            max-width: 980px;
+            width: 100%;
+            text-align: center;
+        }
+
+        .app-footer {
+            margin: 20px auto 10px;
+            padding: 14px 22px;
+            background: var(--color-bg-secondary);
+            border: 1px solid var(--color-border);
+            color: var(--color-text-secondary);
+            font-size: 12px;
+            text-align: center;
+            border-radius: 999px;
+            max-width: 820px;
+            box-shadow: 0 1px 2px rgba(0,0,0,0.06);
+            align-self: center;
+        }
+
+        .app-footer strong {
+            color: var(--color-text-primary);
+            letter-spacing: 0.2px;
+        }
     </style>
 </head>
 <body>
@@ -565,15 +600,17 @@
 
             <div style="background: var(--color-bg-primary); padding: 25px; border-radius: 10px;">
                 <h3 style="color: var(--color-primary); margin-bottom: 15px;">Workflow Diagram</h3>
-                <div class="mermaid">
-                    flowchart TD
-                        A["Add qualified staff (counts, shifts, days)"] --> B["Add support staff (counts, shifts, days)"]
-                        B --> C["Add task lists and required hours"]
-                        C --> D["Review KPIs and variance"]
-                        D --> E["Generate report"]
-                        E --> F["Print report"]
-                        F --> G["Sign and keep in records"]
-                        D --> H["If required, report per compliance thresholds"]
+                <div class="workflow-card">
+                    <div class="mermaid">
+                        flowchart TD
+                            A["Add qualified staff (counts, shifts, days)"] --> B["Add support staff (counts, shifts, days)"]
+                            B --> C["Add task lists and required hours"]
+                            C --> D["Review KPIs and variance"]
+                            D --> E["Generate report"]
+                            E --> F["Print report"]
+                            F --> G["Sign and keep in records"]
+                            D --> H["If required, report per compliance thresholds"]
+                    </div>
                 </div>
                 <p style="margin-top: 10px; color: var(--color-text-secondary);">Tip: Use the Report tab for approvals and the Support tab for help if calculations need clarification.</p>
             </div>
@@ -1241,6 +1278,12 @@
                 <p style="margin-top: 10px;"><strong>Modification Policy:</strong> Any changes to the source code, interface, or logic require prior written approval from the owner and developer. Unauthorized copying, distribution, or modification is prohibited.</p>
             </div>
         </div>
+    </div>
+
+    <div class="app-footer">
+        <strong>MHPlanner+</strong> — © 2026 Kuwait Airways Quality/Compliance Monitoring - Engineering
+        <br>AMXsoft. All rights reserved.
+        <br>Form KUK/QA/248 Issue 02 Rev 00 5 Feb 2026
     </div>
 
     <script>
@@ -2066,7 +2109,19 @@
     <script src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"></script>
     <script>
         if (window.mermaid) {
-            mermaid.initialize({ startOnLoad: true });
+            mermaid.initialize({
+                startOnLoad: true,
+                theme: "base",
+                themeVariables: {
+                    primaryColor: "#e0f2fe",
+                    primaryBorderColor: "#0284c7",
+                    primaryTextColor: "#0f172a",
+                    lineColor: "#0284c7",
+                    secondaryColor: "#f8fafc",
+                    tertiaryColor: "#ffffff",
+                    fontFamily: "-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif"
+                }
+            });
         }
     </script>
 </body>
